sync HTML semantics changes with style.css

--- a/css/style.css
+++ b/css/style.css
@@ -53,16 +53,16 @@ body {
     background-color: white;
 }
 
-.top-wrapper img {
+header img {
     width: 400px;
     border-radius: 30px 30px 0px 0px;
 }
 
-.summary {
+main {
     text-align: center;
 }
 
-.summary p {
+main p {
     padding: 0 50px;
     color: hsl(224, 23%, 55%);
     font-weight: 500;
@@ -131,7 +131,7 @@ a {
     background-color: hsl(253, 94%, 67%);
   }
 
-  .attribution {
+  footer {
       margin-top: 50px;
   }
 
